--- a/src/main/webapp/ui/css/message.css
+++ b/src/main/webapp/ui/css/message.css
@@ -49,3 +49,21 @@
 .message-form input[type="submit"]:hover {
     background-color: #3e8e41;
 }
+
+.message-form {
+    margin-top: 2em;
+}
+
+.back-button {
+    display: inline-block;
+    margin-top: 10px;
+    margin-right: 10px;
+    padding: 10px 20px;
+    background-color: transparent;
+    color: #007bff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+    border: 2px solid #000;
+    transition: all 0.3s ease;
+}
