--- a/src/main/webapp/ui/css/style.css
+++ b/src/main/webapp/ui/css/style.css
@@ -160,3 +160,13 @@ footer {
     color: #fff;
     cursor: pointer;
 }
+
+.title {
+    font-size: 2em;
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+    color: #333;
+    text-shadow: 1px 1px #ccc;
+    font-family: 'Ninja Naruto', cursive;
+}
