--- a/src/main/webapp/ui/css/message.css
+++ b/src/main/webapp/ui/css/message.css
@@ -37,17 +37,23 @@
 }
 
 .message-form input[type="submit"] {
-    background-color: #4CAF50;
-    color: #fff;
+    display: inline-block;
+    margin-top: 10px;
+    margin-right: 10px;
     padding: 10px 20px;
-    border: none;
+    background-color: #050505;
+    color: #fff;
+    text-decoration: none;
     border-radius: 5px;
-    cursor: pointer;
     font-size: 16px;
+    border: 2px solid #000;
+    transition: all 0.3s ease;
 }
 
 .message-form input[type="submit"]:hover {
-    background-color: #3e8e41;
+    background-color: #FFE5B2;
+    color: #050505;
+    cursor: pointer;
 }
 
 .message-form {
@@ -60,10 +66,16 @@
     margin-right: 10px;
     padding: 10px 20px;
     background-color: transparent;
-    color: #007bff;
+    color: #000;
     text-decoration: none;
     border-radius: 5px;
     font-size: 16px;
     border: 2px solid #000;
     transition: all 0.3s ease;
+}
+
+.back-button:hover {
+    background-color: #000;
+    color: #fff;
+    cursor: pointer;
 }
