--- a/src/main/webapp/ui/css/style.css
+++ b/src/main/webapp/ui/css/style.css
@@ -210,3 +210,15 @@ main {
     color: #fff;
     cursor: pointer;
 }
+
+css
+Copy
+header .icon {
+    float: right;
+    margin-right: 20px;
+}
+
+header .icon img {
+    height: 32px;
+    width: 32px;
+}
